dds.dll für Qt 5.6.3 kompiliert und eingebaut

--- a/MB Studio/MB Studio.csproj
+++ b/MB Studio/MB Studio.csproj
@@ -689,9 +689,6 @@
     <None Include="customPreviewShaders.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="imageformats\qdds.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
     <Content Include="J.SYS.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -724,6 +721,7 @@ IF NOT EXIST "$(TargetDir)\imageformats\qicns.dll" COPY "F:\Qt\5.6.3\msvc2015\pl
 IF NOT EXIST "$(TargetDir)\imageformats\qico.dll" COPY "F:\Qt\5.6.3\msvc2015\plugins\imageformats\qico.dll" "$(TargetDir)\imageformats"
 IF NOT EXIST "$(TargetDir)\imageformats\qsvg.dll" COPY "F:\Qt\5.6.3\msvc2015\plugins\imageformats\qsvg.dll" "$(TargetDir)\imageformats"
 IF NOT EXIST "$(TargetDir)\imageformats\qwbmp.dll" COPY "F:\Qt\5.6.3\msvc2015\plugins\imageformats\qwbmp.dll" "$(TargetDir)\imageformats"
+IF NOT EXIST "$(TargetDir)\imageformats\qdds.dll" COPY "F:\Qt\5.6.3\msvc2015\plugins\imageformats\qdds.dll" "$(TargetDir)\imageformats"
 GOTO :eof
 
 :Release_x64
@@ -737,6 +735,7 @@ IF NOT EXIST "$(TargetDir)\imageformats\qicns.dll" COPY "F:\Qt\5.6.3\msvc2015_64
 IF NOT EXIST "$(TargetDir)\imageformats\qico.dll" COPY "F:\Qt\5.6.3\msvc2015_64\plugins\imageformats\qico.dll" "$(TargetDir)\imageformats"
 IF NOT EXIST "$(TargetDir)\imageformats\qsvg.dll" COPY "F:\Qt\5.6.3\msvc2015_64\plugins\imageformats\qsvg.dll" "$(TargetDir)\imageformats"
 IF NOT EXIST "$(TargetDir)\imageformats\qwbmp.dll" COPY "F:\Qt\5.6.3\msvc2015_64\plugins\imageformats\qwbmp.dll" "$(TargetDir)\imageformats"
+IF NOT EXIST "$(TargetDir)\imageformats\qdds.dll" COPY "F:\Qt\5.6.3\msvc2015_64\plugins\imageformats\qdds.dll" "$(TargetDir)\imageformats"
 GOTO :eof
 
 :Debug
@@ -753,6 +752,7 @@ IF NOT EXIST "$(TargetDir)\imageformats\qicnsd.dll" COPY "F:\Qt\5.6.3\msvc2015\p
 IF NOT EXIST "$(TargetDir)\imageformats\qicod.dll" COPY "F:\Qt\5.6.3\msvc2015\plugins\imageformats\qicod.dll" "$(TargetDir)\imageformats"
 IF NOT EXIST "$(TargetDir)\imageformats\qsvgd.dll" COPY "F:\Qt\5.6.3\msvc2015\plugins\imageformats\qsvgd.dll" "$(TargetDir)\imageformats"
 IF NOT EXIST "$(TargetDir)\imageformats\qwbmpd.dll" COPY "F:\Qt\5.6.3\msvc2015\plugins\imageformats\qwbmpd.dll" "$(TargetDir)\imageformats"
+IF NOT EXIST "$(TargetDir)\imageformats\qddsd.dll" COPY "F:\Qt\5.6.3\msvc2015\plugins\imageformats\qddsd.dll" "$(TargetDir)\imageformats"
 GOTO :eof
 
 :Debug_x64
@@ -766,6 +766,7 @@ IF NOT EXIST "$(TargetDir)\imageformats\qicnsd.dll" COPY "F:\Qt\5.6.3\msvc2015_6
 IF NOT EXIST "$(TargetDir)\imageformats\qicod.dll" COPY "F:\Qt\5.6.3\msvc2015_64\plugins\imageformats\qicod.dll" "$(TargetDir)\imageformats"
 IF NOT EXIST "$(TargetDir)\imageformats\qsvgd.dll" COPY "F:\Qt\5.6.3\msvc2015_64\plugins\imageformats\qsvgd.dll" "$(TargetDir)\imageformats"
 IF NOT EXIST "$(TargetDir)\imageformats\qwbmpd.dll" COPY "F:\Qt\5.6.3\msvc2015_64\plugins\imageformats\qwbmpd.dll" "$(TargetDir)\imageformats"
+IF NOT EXIST "$(TargetDir)\imageformats\qddsd.dll" COPY "F:\Qt\5.6.3\msvc2015_64\plugins\imageformats\qddsd.dll" "$(TargetDir)\imageformats"
 </PostBuildEvent>
   </PropertyGroup>
 </Project>
