--- a/MB Studio/MB Studio.csproj
+++ b/MB Studio/MB Studio.csproj
@@ -135,6 +135,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Manager\AddItemFromOtherMod.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Manager\AddItemFromOtherMod.Designer.cs">
+      <DependentUpon>AddItemFromOtherMod.cs</DependentUpon>
+    </Compile>
     <Compile Include="Support\AutoFixer.cs" />
     <Compile Include="Main\CreateProject.cs">
       <SubType>Form</SubType>
@@ -236,6 +242,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Main\MBOptions.resx">
       <DependentUpon>MBOptions.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Manager\AddItemFromOtherMod.resx">
+      <DependentUpon>AddItemFromOtherMod.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Manager\Support\MenuDesigner.resx">
       <DependentUpon>MenuDesigner.cs</DependentUpon>
