--- a/MB Studio/MB Studio.csproj
+++ b/MB Studio/MB Studio.csproj
@@ -135,10 +135,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Manager\AddItemFromOtherMod.cs">
+    <Compile Include="Manager\Support\AddItemFromOtherMod.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Manager\AddItemFromOtherMod.Designer.cs">
+    <Compile Include="Manager\Support\AddItemFromOtherMod.Designer.cs">
       <DependentUpon>AddItemFromOtherMod.cs</DependentUpon>
     </Compile>
     <Compile Include="Support\AutoFixer.cs" />
@@ -243,7 +243,7 @@
     <EmbeddedResource Include="Main\MBOptions.resx">
       <DependentUpon>MBOptions.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Manager\AddItemFromOtherMod.resx">
+    <EmbeddedResource Include="Manager\Support\AddItemFromOtherMod.resx">
       <DependentUpon>AddItemFromOtherMod.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Manager\Support\MenuDesigner.resx">
