--- a/MB Studio/MB Studio.csproj
+++ b/MB Studio/MB Studio.csproj
@@ -135,16 +135,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Manager\Support\AddItemFromOtherMod.cs">
+    <Compile Include="Manager\Support\External\AddTroopFromOtherMod.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Manager\Support\AddItemFromOtherMod.Designer.cs">
+    <Compile Include="Manager\Support\External\AddTroopFromOtherMod.Designer.cs">
+      <DependentUpon>AddTroopFromOtherMod.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Manager\Support\External\AddItemFromOtherMod.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Manager\Support\External\AddItemFromOtherMod.Designer.cs">
       <DependentUpon>AddItemFromOtherMod.cs</DependentUpon>
     </Compile>
-    <Compile Include="Manager\Support\AddTypeFromOtherMod.cs">
+    <Compile Include="Manager\Support\External\AddTypeFromOtherMod.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Manager\Support\AddTypeFromOtherMod.Designer.cs">
+    <Compile Include="Manager\Support\External\AddTypeFromOtherMod.Designer.cs">
       <DependentUpon>AddTypeFromOtherMod.cs</DependentUpon>
     </Compile>
     <Compile Include="Support\AutoFixer.cs" />
@@ -249,10 +255,13 @@
     <EmbeddedResource Include="Main\MBOptions.resx">
       <DependentUpon>MBOptions.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Manager\Support\AddItemFromOtherMod.resx">
+    <EmbeddedResource Include="Manager\Support\External\AddTroopFromOtherMod.resx">
+      <DependentUpon>AddTroopFromOtherMod.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Manager\Support\External\AddItemFromOtherMod.resx">
       <DependentUpon>AddItemFromOtherMod.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Manager\Support\AddTypeFromOtherMod.resx">
+    <EmbeddedResource Include="Manager\Support\External\AddTypeFromOtherMod.resx">
       <DependentUpon>AddTypeFromOtherMod.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Manager\Support\MenuDesigner.resx">
