--- a/MB_Decompiler/MB_Decompiler.csproj
+++ b/MB_Decompiler/MB_Decompiler.csproj
@@ -50,17 +50,16 @@
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>118CFDA376B3E271EDFDA95427B1EA997F4F1859</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>3056811D78E6F998FA02B6DE1BF411AED0FEFE73</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>
-    </ManifestKeyFile>
+    <ManifestKeyFile>MB_Decompiler_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
