CheckIfEqualFiles outdated certificate removed + created minimum requirements file for manager + added region AddFromOtherMod in ToolForm

--- a/CheckIfEqualFiles/CheckIfEqualFiles/CheckIfEqualFiles.csproj
+++ b/CheckIfEqualFiles/CheckIfEqualFiles/CheckIfEqualFiles.csproj
@@ -39,7 +39,7 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -93,7 +93,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="CheckIfEqualFiles_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
