Created Example.Designer.xml as replacement for VS Designer .cs file + changed scripting functions code + generate code from Example.Designer.xml (lab test successful)

--- a/MB Studio/MB Studio.csproj
+++ b/MB Studio/MB Studio.csproj
@@ -460,9 +460,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Manager\minimumRequiredForManager.txt" />
-    <Content Include="Manager\Scripts\Example\Example.xml">
+    <None Include="Manager\Scripts\Example\Example.Designer.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    </None>
+    <None Include="Manager\Scripts\Example\Example.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="PostBuildEvents.bat" />
     <None Include="files\exchange_objects.py">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
