--- a/MB_Decompiler_Library/MB_Decompiler_Library.csproj
+++ b/MB_Decompiler_Library/MB_Decompiler_Library.csproj
@@ -80,6 +80,7 @@
     <Compile Include="IO\SourceReader.cs" />
     <Compile Include="Objects\Animation.cs" />
     <Compile Include="Objects\Item.cs" />
+    <Compile Include="Objects\Skriptum.cs" />
     <Compile Include="Objects\Support\AnimationSequence.cs" />
     <Compile Include="Objects\Dialog.cs" />
     <Compile Include="IO\ConstantsFinder.cs" />
