--- a/MB Studio Updater/MB Studio Updater.csproj
+++ b/MB Studio Updater/MB Studio Updater.csproj
@@ -8,8 +8,9 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>MB_Studio_Updater</RootNamespace>
     <AssemblyName>MB Studio Updater</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
