--- a/MB Studio/App.config
+++ b/MB Studio/App.config
@@ -7,13 +7,12 @@
     </configSections>
     <startup> 
         
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7"/></startup>
     <userSettings>
         <MB_Studio.Properties.Settings>
             <setting name="setNames" serializeAs="Xml">
                 <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
                         <string>#Set1</string>
                         <string>#Set2</string>
                         <string>#Set3</string>
@@ -25,8 +24,7 @@
             </setting>
             <setting name="setAttribs" serializeAs="Xml">
                 <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
                         <string>0|0|0|0|0|0</string>
                         <string>0|0|0|0|0|0</string>
                         <string>0|0|0|0|0|0</string>
@@ -38,8 +36,7 @@
             </setting>
             <setting name="setItems" serializeAs="Xml">
                 <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
                         <string>-</string>
                         <string>-</string>
                         <string>-</string>
@@ -51,8 +48,7 @@
             </setting>
             <setting name="setItemsFlags" serializeAs="Xml">
                 <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
                         <string>-</string>
                         <string>-</string>
                         <string>-</string>
