--- a/MB_Decompiler/App.config
+++ b/MB_Decompiler/App.config
@@ -7,7 +7,7 @@
     </configSections>
     <startup> 
         
-    <supportedRuntime version="v2.0.50727"/></startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7"/></startup>
     <userSettings>
         <MB_Decompiler.Properties.Settings>
             <setting name="lastOpenedProjects" serializeAs="Xml">
