--- a/Warband - Translator/Warband - Translator/App.config
+++ b/Warband - Translator/Warband - Translator/App.config
@@ -7,7 +7,7 @@
     </configSections>
     <startup> 
         
-    <supportedRuntime version="v2.0.50727"/></startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7"/></startup>
     <userSettings>
         <Warband___Translator.Properties.Settings>
             <setting name="module_path" serializeAs="String">
