Optimized Code + change all .net framework versions to 4.6.2 + changed importantLib to .netstandard 2.0 project + item manager 3dView bugfix

--- a/MB Studio/MB Studio.csproj
+++ b/MB Studio/MB Studio.csproj
@@ -389,6 +389,7 @@
     <None Include="Manager\Scripts\README.MD">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="packages.config" />
     <None Include="qt.conf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
