updater code fix (WIP)

--- a/MB Studio/MB Studio.csproj
+++ b/MB Studio/MB Studio.csproj
@@ -143,9 +143,7 @@
       <DependentUpon>QuestManager.cs</DependentUpon>
     </Compile>
     <Compile Include="Manager\ScriptCommander.cs" />
-    <None Include="debugMode.enabled">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    <None Include="debugMode.enabled" />
     <None Include="Manager\Scripts\Template\CustomManagerTemplate.cs">
       <SubType>Form</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
