--- a/MB Studio Updater/MB Studio Updater.csproj
+++ b/MB Studio Updater/MB Studio Updater.csproj
@@ -76,4 +76,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>COPY "$(TargetPath)" "$(SolutionDir)\MB Studio\$(OutDir)"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
