--- a/MB Studio/App.config
+++ b/MB Studio/App.config
@@ -12,7 +12,8 @@
         <MB_Studio.Properties.Settings>
             <setting name="setNames" serializeAs="Xml">
                 <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
                         <string>#Set1</string>
                         <string>#Set2</string>
                         <string>#Set3</string>
@@ -24,7 +25,8 @@
             </setting>
             <setting name="setAttribs" serializeAs="Xml">
                 <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
                         <string>0|0|0|0|0|0</string>
                         <string>0|0|0|0|0|0</string>
                         <string>0|0|0|0|0|0</string>
@@ -36,7 +38,8 @@
             </setting>
             <setting name="setItems" serializeAs="Xml">
                 <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
                         <string>-</string>
                         <string>-</string>
                         <string>-</string>
@@ -48,7 +51,8 @@
             </setting>
             <setting name="setItemsFlags" serializeAs="Xml">
                 <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
                         <string>-</string>
                         <string>-</string>
                         <string>-</string>
@@ -75,6 +79,12 @@
             </setting>
             <setting name="baseColor" serializeAs="String">
                 <value>56, 56, 56</value>
+            </setting>
+            <setting name="showUpdaterConsole" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="runAutoUpdate" serializeAs="String">
+                <value>True</value>
             </setting>
         </MB_Studio.Properties.Settings>
     </userSettings>
