--- a/MB Studio/Properties/Settings.settings
+++ b/MB Studio/Properties/Settings.settings
@@ -64,5 +64,11 @@
     <Setting Name="baseColor" Type="System.Drawing.Color" Scope="User">
       <Value Profile="(Default)">56, 56, 56</Value>
     </Setting>
+    <Setting Name="showUpdaterConsole" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="runAutoUpdate" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
