--- a/MB_Decompiler_Library/MB_Studio_Library.csproj
+++ b/MB_Decompiler_Library/MB_Studio_Library.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{FC643914-80E5-42FF-806B-C23E37DD9EC5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MB_Decompiler_Library</RootNamespace>
-    <AssemblyName>MB_Decompiler_Library</AssemblyName>
+    <RootNamespace>MB_Studio_Library</RootNamespace>
+    <AssemblyName>MB_Studio_Library</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
