CheckIfEqualFiles added module_info.path for testing + changed example path

--- a/CheckIfEqualFiles/CheckIfEqualFiles/CheckIfEqualFiles.csproj
+++ b/CheckIfEqualFiles/CheckIfEqualFiles/CheckIfEqualFiles.csproj
@@ -93,6 +93,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="files\module_info.path">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
