--- a/MB_Studio_Library/MB Studio Library.csproj
+++ b/MB_Studio_Library/MB Studio Library.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MB_Studio_Library</RootNamespace>
-    <AssemblyName>MB_Studio_Library</AssemblyName>
+    <AssemblyName>MB Studio Library</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
