--- a/CheckIfEqualFiles/CheckIfEqualFiles/CheckIfEqualFiles.csproj
+++ b/CheckIfEqualFiles/CheckIfEqualFiles/CheckIfEqualFiles.csproj
@@ -111,11 +111,11 @@
     </ProjectReference>
     <ProjectReference Include="..\..\MB Studio CLI\MB Studio CLI.csproj">
       <Project>{6E4A3036-1E9C-4539-B64F-1814A82DBD62}</Project>
-      <Name>MB_Studio_CLI</Name>
+      <Name>MB Studio CLI</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\MB_Studio_Library\MB_Studio_Library.csproj">
+    <ProjectReference Include="..\..\MB_Studio_Library\MB Studio Library.csproj">
       <Project>{FC643914-80E5-42FF-806B-C23E37DD9EC5}</Project>
-      <Name>MB_Studio_Library</Name>
+      <Name>MB Studio Library</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
